--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,5 +27,6 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        python ./oroi/manage.py migrate
-        python ./oroi/manage.py test
+        cd ./oroi/
+        python ./manage.py migrate
+        python ./manage.py test
