--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ django==3.0.7             # via -r requirements.in, django-filter, djangorestfra
 djangorestframework==3.11.0  # via django-elasticsearch-dsl-drf
 elasticsearch-dsl==7.2.1  # via django-elasticsearch-dsl, django-elasticsearch-dsl-drf
 elasticsearch==7.7.1      # via django-elasticsearch-dsl-drf, elasticsearch-dsl
+gunicorn==20.0.4          # via -r requirements.in
 mako==1.1.3               # via alembic
 markupsafe==1.1.1         # via mako
 psycopg2==2.8.5           # via -r requirements.in
@@ -27,3 +28,6 @@ six==1.15.0               # via django-elasticsearch-dsl, django-elasticsearch-d
 sqlalchemy==1.3.17        # via alembic, dataset
 sqlparse==0.3.1           # via django
 urllib3==1.25.9           # via elasticsearch
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
