--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -21,6 +21,7 @@ django==3.0.7             # via -r requirements.in, django-filter, djangorestfra
 djangorestframework==3.11.0  # via django-elasticsearch-dsl-drf
 elasticsearch-dsl==7.2.1  # via django-elasticsearch-dsl, django-elasticsearch-dsl-drf
 elasticsearch==7.7.1      # via django-elasticsearch-dsl-drf, elasticsearch-dsl
+gunicorn==20.0.4          # via -r requirements.in
 mako==1.1.3               # via alembic
 markupsafe==1.1.1         # via mako
 pathspec==0.8.0           # via black
@@ -36,3 +37,6 @@ sqlparse==0.3.1           # via django
 toml==0.10.1              # via black
 typed-ast==1.4.1          # via black
 urllib3==1.25.9           # via elasticsearch, selenium
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
