--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -4,39 +4,96 @@
 #
 #    pip-compile requirements_dev.in
 #
-alembic==1.4.2            # via dataset
-appdirs==1.4.4            # via black
-asgiref==3.2.7            # via django
-attrs==19.3.0             # via black
-black==19.10b0            # via -r requirements_dev.in
-certifi==2020.4.5.2       # via elasticsearch
-click==7.1.2              # via black
-dataset==1.3.1            # via -r requirements.in
-django-elasticsearch-dsl-drf==0.20.8  # via -r requirements.in
-django-elasticsearch-dsl==7.1.1  # via django-elasticsearch-dsl-drf
-django-environ==0.4.5     # via -r requirements.in
-django-filter==2.3.0      # via -r requirements.in
-django-nine==0.2.3        # via django-elasticsearch-dsl-drf
-django==3.0.7             # via -r requirements.in, django-filter, djangorestframework
-djangorestframework==3.11.0  # via django-elasticsearch-dsl-drf
-elasticsearch-dsl==7.2.1  # via django-elasticsearch-dsl, django-elasticsearch-dsl-drf
-elasticsearch==7.7.1      # via django-elasticsearch-dsl-drf, elasticsearch-dsl
-gunicorn==20.0.4          # via -r requirements.in
-mako==1.1.3               # via alembic
-markupsafe==1.1.1         # via mako
-pathspec==0.8.0           # via black
-psycopg2==2.8.5           # via -r requirements.in
-python-dateutil==2.8.1    # via alembic, elasticsearch-dsl
-python-editor==1.0.4      # via alembic
-pytz==2020.1              # via django
-regex==2020.6.8           # via black
-selenium==3.141.0         # via -r requirements_dev.in
-six==1.15.0               # via django-elasticsearch-dsl, django-elasticsearch-dsl-drf, elasticsearch-dsl, python-dateutil
-sqlalchemy==1.3.17        # via alembic, dataset
-sqlparse==0.3.1           # via django
-toml==0.10.1              # via black
-typed-ast==1.4.1          # via black
-urllib3==1.25.9           # via elasticsearch, selenium
+alembic==1.5.8
+    # via dataset
+appdirs==1.4.4
+    # via black
+asgiref==3.3.4
+    # via django
+banal==1.0.6
+    # via dataset
+black==20.8b1
+    # via -r requirements_dev.in
+certifi==2020.12.5
+    # via elasticsearch
+click==7.1.2
+    # via black
+dataset==1.4.5
+    # via -r requirements.in
+django-elasticsearch-dsl-drf==0.22
+    # via -r requirements.in
+django-elasticsearch-dsl==7.1.4
+    # via django-elasticsearch-dsl-drf
+django-environ==0.4.5
+    # via -r requirements.in
+django-filter==2.4.0
+    # via -r requirements.in
+django-nine==0.2.4
+    # via django-elasticsearch-dsl-drf
+django==3.2
+    # via
+    #   -r requirements.in
+    #   django-filter
+    #   django-nine
+    #   djangorestframework
+djangorestframework==3.12.4
+    # via django-elasticsearch-dsl-drf
+elasticsearch-dsl==7.3.0
+    # via
+    #   django-elasticsearch-dsl
+    #   django-elasticsearch-dsl-drf
+elasticsearch==7.12.0
+    # via
+    #   django-elasticsearch-dsl-drf
+    #   elasticsearch-dsl
+greenlet==1.0.0
+    # via sqlalchemy
+gunicorn==20.1.0
+    # via -r requirements.in
+mako==1.1.4
+    # via alembic
+markupsafe==1.1.1
+    # via mako
+mypy-extensions==0.4.3
+    # via black
+pathspec==0.8.1
+    # via black
+psycopg2==2.8.6
+    # via -r requirements.in
+python-dateutil==2.8.1
+    # via
+    #   alembic
+    #   elasticsearch-dsl
+python-editor==1.0.4
+    # via alembic
+pytz==2021.1
+    # via django
+regex==2021.4.4
+    # via black
+selenium==3.141.0
+    # via -r requirements_dev.in
+six==1.15.0
+    # via
+    #   django-elasticsearch-dsl
+    #   django-elasticsearch-dsl-drf
+    #   elasticsearch-dsl
+    #   python-dateutil
+sqlalchemy==1.4.7
+    # via
+    #   alembic
+    #   dataset
+sqlparse==0.4.1
+    # via django
+toml==0.10.2
+    # via black
+typed-ast==1.4.3
+    # via black
+typing-extensions==3.7.4.3
+    # via black
+urllib3==1.26.4
+    # via
+    #   elasticsearch
+    #   selenium
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
