--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -8,6 +8,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    # This is from https://github.com/elastic/elastic-github-actions/tree/master/elasticsearch
+    - name: Configure sysctl limits
+      run: |
+        sudo swapoff -a
+        sudo sysctl -w vm.swappiness=1
+        sudo sysctl -w fs.file-max=262144
+        sudo sysctl -w vm.max_map_count=262144
     - name: Install Dependencies
       run: |
         docker-compose up -d
