--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,7 +13,7 @@ jobs:
         docker-compose up -d
         docker-compose exec -T declaration_nav pip install -r /code/requirements_dev.txt
         docker-compose exec -T declaration_nav sh -c 'apt update && apt -y install chromium'
-        docker-compose exec -T declaration_nav sh -c 'wget http://chromedriver.storage.googleapis.com/80.0.3987.106/chromedriver_linux64.zip && unzip chromedriver_linux64.zip -d /usr/local/bin'
+        docker-compose exec -T declaration_nav sh -c 'wget http://chromedriver.storage.googleapis.com/89.0.4389.23/chromedriver_linux64.zip && unzip chromedriver_linux64.zip -d /usr/local/bin'
     - name: Run Tests
       run: |
         docker-compose exec -T declaration_nav sh -c 'CHROME_NO_SANDBOX=True ./manage.py test'
